# bungeegum

./: .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  lint.yml
android_app/: mypy.ini  settings.gradle
android_app/com.zetier.bungeegum/: build.gradle
android_app/com.zetier.bungeegum/src/main/: AndroidManifest.xml
android_app/com.zetier.bungeegum/src/main/java/com/zetier/bungeegum/: BgActivity.java
android_app/com.zetier.bungeegum/src/main/res/layout/: activity_bg.xml
android_app/com.zetier.bungeegum/src/main/res/values/: strings.xml
python/: pyproject.toml  setup.py
python/src/bungeegum/: __init__.py  bg.py  fork_exec.js  run_shellcode.js
test/: exit42_arm64-v8a
