[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bungeegum"
version = "0.1.0"
authors = [{ name = "Zetier" }]
description = "A set of tools to test payloads within the context of a standard Android application"
readme = "README.md"
dependencies = ['adbutils==2.7.*', 'frida==16.4.*', 'importlib_resources==6.4.*']
requires-python = ">=3.8"

classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
]

keywords = [
    'bungeegum',
    'automation',
    'android',
    'testing',
    'openstf',
	'rce',
]

[project.urls]
"Homepage" = "https://github.com/Zetier/bungeegum"
"Bug Tracker" = "https://github.com/Zetier/bungeegum/issues"

[project.scripts]
bungeegum = "bungeegum.bungeegum:main"
